--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.17.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cjtrahey/notetaker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/cjtrahey/notetaker/issues"
+  },
+  "homepage": "https://github.com/cjtrahey/notetaker#readme",
+  "description": ""
 }
